--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="color-scheme" content="light" />
-    <link rel="canonical" href="https://furumachi-smec.lognowa.com/public/lp" />
+    <link rel="canonical" href="https://furumachi-smec.lognowa.com/public/lp_2" />
     <meta name="theme-color" content="#1F3A5F" />
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600;700;900&display=swap" as="style" />
     <link rel="preload" href="/src/assets/hero-consulting.jpg" as="image" fetchpriority="high" />
@@ -33,10 +33,10 @@
       content="専門家×生成AIで粗利+5.8pt／在庫回転+22%／意思決定リードタイム▲52%（例）。週1回のAIレポートでリスクと機会を前倒し把握し、社長の判断時間を守ります。"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://furumachi-smec.lognowa.com/public/lp" />
+    <meta property="og:url" content="https://furumachi-smec.lognowa.com/public/lp_2" />
     <meta property="og:site_name" content="株式会社創和経営コンサルティング｜AI経営顧問" />
     <meta property="og:locale" content="ja_JP" />
-    <meta property="og:image" content="https://furumachi-smec.lognowa.com/public/lp/og-image.svg" />
+    <meta property="og:image" content="https://furumachi-smec.lognowa.com/public/lp_2/og-image.svg" />
     <meta property="og:image:type" content="image/svg+xml" />
     <meta property="og:image:alt" content="専門家と生成AIが意思決定ボードで経営判断を支援する様子" />
 
@@ -48,7 +48,7 @@
       name="twitter:description"
       content="週1回のAIレポートと専門家の伴走で、粗利とキャッシュの先読みを週次で更新。意思決定の質・速さ・先見性を高める福岡発のサービスです。"
     />
-    <meta name="twitter:image" content="https://furumachi-smec.lognowa.com/public/lp/og-image.svg" />
+    <meta name="twitter:image" content="https://furumachi-smec.lognowa.com/public/lp_2/og-image.svg" />
     <meta name="twitter:image:alt" content="AI経営顧問サービスの紹介ビジュアル" />
 
     <script type="application/ld+json">
@@ -56,7 +56,7 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "迷いない意思決定へ導くAI経営伴走",
-        "url": "https://furumachi-smec.lognowa.com/public/lp",
+        "url": "https://furumachi-smec.lognowa.com/public/lp_2",
         "description": "専門家×生成AIで粗利とキャッシュを先読みし、意思決定の質・速さ・先見性を高める伴走型経営支援",
         "inLanguage": "ja-JP",
         "isPartOf": {
@@ -71,7 +71,7 @@
           "provider": {
             "@type": "Organization",
             "name": "株式会社創和経営コンサルティング",
-            "url": "https://furumachi-smec.lognowa.com/public/lp"
+            "url": "https://furumachi-smec.lognowa.com/public/lp_2"
           },
           "areaServed": {
             "@type": "AdministrativeArea",
