--- a/index.html
+++ b/index.html
@@ -1,159 +1,147 @@
-diff --git a/index.html b/index.html
-index c64517956b54fd4c6648a193791e66ff1daa597f..33cdf0c85fce41f7732352d55b1fa2e16b25c451 100644
---- a/index.html
-+++ b/index.html
-@@ -1,95 +1,95 @@
- <!doctype html>
- <html lang="ja">
-   <head>
-     <meta charset="UTF-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
--    <title>福岡のAI経営顧問｜売上と資金繰りを同時改善</title>
-+    <title>生成AI×専門家で描く経営再生の設計図｜創和経営コンサルティング</title>
-     <meta
-       name="description"
--      content="AI×管理会計×資金繰りで福岡・九州の年商5000万円～10億円企業を伴走支援。3ヶ月で数字と打ち手を定着し、無料相談と3分資料DLをオンラインで受付中。"
-+      content="生成AIと中小企業診断士が数字・現場・資金を統合し、福岡の事業再生を伴走支援。粗利・キャッシュ・人材を横断した“再生の設計図”を48時間で提示し、金融機関連携まで支援します。"
-     />
-     <meta name="author" content="株式会社創和経営コンサルティング" />
-     <meta
-       name="keywords"
--      content="福岡, 九州, 中小企業, 経営顧問, AI導入, 管理会計, 資金繰り, 伴走支援, 金融機関"
-+      content="福岡, 九州, 中小企業, 経営再生, 事業再生, 生成AI, 中小企業診断士, 粗利改善, 資金繰り"
-     />
-     <meta name="robots" content="index, follow" />
-     <meta name="format-detection" content="telephone=no" />
-     <meta name="color-scheme" content="light" />
-     <link rel="canonical" href="https://furumachi-smec.lognowa.com/public/lp_2" />
-     <meta name="theme-color" content="#1F3A5F" />
-     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600;700;900&display=swap" as="style" />
-     <link rel="preload" href="/src/assets/hero-consulting.jpg" as="image" fetchpriority="high" />
-     <link rel="preconnect" href="https://fonts.googleapis.com" />
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-     <link
-       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&family=Shippori+Mincho:wght@500;600;700&display=swap"
-       rel="stylesheet"
-     />
- 
--    <meta property="og:title" content="迷いない意思決定へ導くAI経営伴走｜創和経営コンサルティング" />
-+    <meta property="og:title" content="生成AI×専門家が描く“再生の設計図”｜創和経営コンサルティング" />
-     <meta
-       property="og:description"
--      content="専門家×生成AIで粗利+5.8pt／在庫回転+22%／意思決定リードタイム▲52%（例）。週1回のAIレポートでリスクと機会を前倒し把握し、社長の判断時間を守ります。"
-+      content="生成AIが財務・需要・人材を横断分析し、中小企業診断士が現場視点で再生ロードマップへ翻訳。粗利改善と資金繰りの同時再構築、金融機関交渉まで伴走します。"
-     />
-     <meta property="og:type" content="website" />
-     <meta property="og:url" content="https://furumachi-smec.lognowa.com/public/lp_2" />
-     <meta property="og:site_name" content="株式会社創和経営コンサルティング｜AI経営顧問" />
-     <meta property="og:locale" content="ja_JP" />
-     <meta property="og:image" content="https://furumachi-smec.lognowa.com/public/lp_2/og-image.svg" />
-     <meta property="og:image:type" content="image/svg+xml" />
-     <meta property="og:image:alt" content="専門家と生成AIが意思決定ボードで経営判断を支援する様子" />
- 
-     <meta name="twitter:card" content="summary_large_image" />
-     <meta name="twitter:site" content="@lognowa" />
-     <meta name="twitter:creator" content="@lognowa" />
--    <meta name="twitter:title" content="迷いない意思決定をつくるAI経営伴走" />
-+    <meta name="twitter:title" content="AIと専門家で再生の未来を描く" />
-     <meta
-       name="twitter:description"
--      content="週1回のAIレポートと専門家の伴走で、粗利とキャッシュの先読みを週次で更新。意思決定の質・速さ・先見性を高める福岡発のサービスです。"
-+      content="粗利・キャッシュ・人材の論点をAIが72時間で可視化し、専門家が実行ロードマップと交渉資料へ落とし込みます。福岡発の経営再生支援プログラムです。"
-     />
-     <meta name="twitter:image" content="https://furumachi-smec.lognowa.com/public/lp_2/og-image.svg" />
-     <meta name="twitter:image:alt" content="AI経営顧問サービスの紹介ビジュアル" />
- 
-     <script type="application/ld+json">
-       {
-         "@context": "https://schema.org",
-         "@type": "WebPage",
--        "name": "迷いない意思決定へ導くAI経営伴走",
-+        "name": "生成AI×専門家で描く経営再生の設計図",
-         "url": "https://furumachi-smec.lognowa.com/public/lp_2",
--        "description": "専門家×生成AIで粗利とキャッシュを先読みし、意思決定の質・速さ・先見性を高める伴走型経営支援",
-+        "description": "生成AIと中小企業診断士の知見を融合し、粗利・資金・需要を読み解く経営再生の設計図を提供",
-         "inLanguage": "ja-JP",
-         "isPartOf": {
-           "@type": "WebSite",
-           "name": "株式会社創和経営コンサルティング",
-           "url": "https://furumachi-smec.lognowa.com/"
-         },
-         "about": {
-           "@type": "Service",
--          "name": "伴走型AI経営顧問",
--          "serviceType": "AI経営支援",
-+          "name": "AI×専門家による経営再生支援",
-+          "serviceType": "経営再生コンサルティング",
-           "provider": {
-             "@type": "Organization",
-             "name": "株式会社創和経営コンサルティング",
-             "url": "https://furumachi-smec.lognowa.com/public/lp_2"
-           },
-           "areaServed": {
-             "@type": "AdministrativeArea",
-             "name": "九州地方"
-           },
-           "offers": {
-             "@type": "Offer",
-             "priceCurrency": "JPY",
-             "price": "180000",
-             "availability": "https://schema.org/InStock"
-           }
-         }
-       }
-     </script>
-   </head>
- 
-   <body>
-     <div id="root"></div>
-     <script type="module" src="/src/main.tsx"></script>
-     <noscript>
-       <style>
-@@ -106,42 +106,42 @@
-         }
-         .lp-noscript-wrapper p,
-         .lp-noscript-wrapper li {
-           font-size: 1rem;
-           line-height: 1.7;
-         }
-         .lp-noscript-wrapper ul {
-           margin: 1rem 0;
-           padding-left: 1.25rem;
-         }
-         .lp-noscript-wrapper a {
-           color: #0f766e;
-           font-weight: 600;
-         }
-         .lp-noscript-wrapper .lp-noscript-cta {
-           display: inline-block;
-           margin-top: 1.5rem;
-           padding: 0.85rem 1.6rem;
-           background: #1d4ed8;
-           color: #fff;
-           border-radius: 9999px;
-           text-decoration: none;
-         }
-       </style>
-       <div class="lp-noscript-wrapper">
--        <h1>AIが経営数字を先読み。社長は意思決定だけに集中</h1>
-+        <h1>生成AI×専門家で“再生の設計図”を描き直す</h1>
-         <p>
--          週1回のAIレポートで迷いのない経営判断をサポートします。決断までの時間を50％削減し、3ヶ月で利益とキャッシュの同時成長を目指す伴走型AI経営顧問です。
-+          48時間で粗利・キャッシュ・人材データを可視化し、福岡の経営再生チームが実行ロードマップを伴走。金融機関との対話に使える根拠資料まで整備します。
-         </p>
-         <ul>
--          <li>生成AIが粗利と資金繰りを分析し、次の一手を提示</li>
--          <li>管理会計と資金計画を専門チームが整備</li>
--          <li>初回30分の無料相談で現状課題を棚卸し</li>
-+          <li>生成AIが需要・資金繰り・人材稼働を同時解析</li>
-+          <li>中小企業診断士が再生シナリオと優先施策を提示</li>
-+          <li>週次レビューで進捗と交渉資料を継続アップデート</li>
-         </ul>
-         <p>
-           お急ぎの方は <a href="tel:092-231-2920">092-231-2920</a> までお電話ください（平日9:00-18:00）。
-         </p>
-         <a class="lp-noscript-cta" href="mailto:10vance.re.silie.nce@gmail.com">無料相談をメールで申し込む</a>
-       </div>
-     </noscript>
-   </body>
- </html>
+<!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>生成AI×専門家で描く経営再生の設計図｜創和経営コンサルティング</title>
+    <meta
+      name="description"
+      content="生成AIと中小企業診断士が数字・現場・資金を統合し、福岡の事業再生を伴走支援。粗利・キャッシュ・人材を横断した“再生の設計図”を48時間で提示し、金融機関連携まで支援します。"
+    />
+    <meta name="author" content="株式会社創和経営コンサルティング" />
+    <meta
+      name="keywords"
+      content="福岡, 九州, 中小企業, 経営再生, 事業再生, 生成AI, 中小企業診断士, 粗利改善, 資金繰り"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="color-scheme" content="light" />
+    <link rel="canonical" href="https://furumachi-smec.lognowa.com/public/lp_2" />
+    <meta name="theme-color" content="#1F3A5F" />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600;700;900&display=swap" as="style" />
+    <link rel="preload" href="/src/assets/hero-consulting.jpg" as="image" fetchpriority="high" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&family=Shippori+Mincho:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <meta property="og:title" content="生成AI×専門家が描く“再生の設計図”｜創和経営コンサルティング" />
+    <meta
+      property="og:description"
+      content="生成AIが財務・需要・人材を横断分析し、中小企業診断士が現場視点で再生ロードマップへ翻訳。粗利改善と資金繰りの同時再構築、金融機関交渉まで伴走します。"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://furumachi-smec.lognowa.com/public/lp_2" />
+    <meta property="og:site_name" content="株式会社創和経営コンサルティング｜AI経営顧問" />
+    <meta property="og:locale" content="ja_JP" />
+    <meta property="og:image" content="https://furumachi-smec.lognowa.com/public/lp_2/og-image.svg" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:image:alt" content="専門家と生成AIが意思決定ボードで経営判断を支援する様子" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lognowa" />
+    <meta name="twitter:creator" content="@lognowa" />
+    <meta name="twitter:title" content="AIと専門家で再生の未来を描く" />
+    <meta
+      name="twitter:description"
+      content="粗利・キャッシュ・人材の論点をAIが72時間で可視化し、専門家が実行ロードマップと交渉資料へ落とし込みます。福岡発の経営再生支援プログラムです。"
+    />
+    <meta name="twitter:image" content="https://furumachi-smec.lognowa.com/public/lp_2/og-image.svg" />
+    <meta name="twitter:image:alt" content="AI経営顧問サービスの紹介ビジュアル" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "生成AI×専門家で描く経営再生の設計図",
+        "url": "https://furumachi-smec.lognowa.com/public/lp_2",
+        "description": "生成AIと中小企業診断士の知見を融合し、粗利・資金・需要を読み解く経営再生の設計図を提供",
+        "inLanguage": "ja-JP",
+        "isPartOf": {
+          "@type": "WebSite",
+          "name": "株式会社創和経営コンサルティング",
+          "url": "https://furumachi-smec.lognowa.com/"
+        },
+        "about": {
+          "@type": "Service",
+          "name": "AI×専門家による経営再生支援",
+          "serviceType": "経営再生コンサルティング",
+          "provider": {
+            "@type": "Organization",
+            "name": "株式会社創和経営コンサルティング",
+            "url": "https://furumachi-smec.lognowa.com/public/lp_2"
+          },
+          "areaServed": {
+            "@type": "AdministrativeArea",
+            "name": "九州地方"
+          },
+          "offers": {
+            "@type": "Offer",
+            "priceCurrency": "JPY",
+            "price": "180000",
+            "availability": "https://schema.org/InStock"
+          }
+        }
+      }
+    </script>
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+    <noscript>
+      <style>
+        .lp-noscript-wrapper {
+          font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+          background: #f8fbff;
+          color: #0f172a;
+          padding: 2.5rem 1.5rem 3rem;
+        }
+        .lp-noscript-wrapper h1 {
+          font-size: 1.75rem;
+          line-height: 1.4;
+          margin-bottom: 1rem;
+        }
+        .lp-noscript-wrapper p,
+        .lp-noscript-wrapper li {
+          font-size: 1rem;
+          line-height: 1.7;
+        }
+        .lp-noscript-wrapper ul {
+          margin: 1rem 0;
+          padding-left: 1.25rem;
+        }
+        .lp-noscript-wrapper a {
+          color: #0f766e;
+          font-weight: 600;
+        }
+        .lp-noscript-wrapper .lp-noscript-cta {
+          display: inline-block;
+          margin-top: 1.5rem;
+          padding: 0.85rem 1.6rem;
+          background: #1d4ed8;
+          color: #fff;
+          border-radius: 9999px;
+          text-decoration: none;
+        }
+      </style>
+      <div class="lp-noscript-wrapper">
+        <h1>生成AI×専門家で“再生の設計図”を描き直す</h1>
+        <p>
+          48時間で粗利・キャッシュ・人材データを可視化し、福岡の経営再生チームが実行ロードマップを伴走。金融機関との対話に使える根拠資料まで整備します。
+        </p>
+        <ul>
+          <li>生成AIが需要・資金繰り・人材稼働を同時解析</li>
+          <li>中小企業診断士が再生シナリオと優先施策を提示</li>
+          <li>週次レビューで進捗と交渉資料を継続アップデート</li>
+        </ul>
+        <p>
+          お急ぎの方は <a href="tel:092-231-2920">092-231-2920</a> までお電話ください（平日9:00-18:00）。
+        </p>
+        <a class="lp-noscript-cta" href="mailto:10vance.re.silie.nce@gmail.com">無料相談をメールで申し込む</a>
+      </div>
+    </noscript>
+  </body>
+</html>
