Implement conversion-oriented LP enhancements

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>生成AI×専門家で描く経営再生の設計図｜創和経営コンサルティング</title>
     <meta
       name="description"
-      content="生成AIと中小企業診断士が数字・現場・資金を統合し、福岡の事業再生を伴走支援。粗利・キャッシュ・人材を横断した“再生の設計図”を48時間で提示し、金融機関連携まで支援します。"
+      content="福岡・九州の中小企業に特化し、生成AIと診断士が粗利・資金・人材を横断分析。45分の初回相談と48時間診断で再生シナリオと銀行交渉資料まで整備する伴走型サービスです。"
     />
     <meta name="author" content="株式会社創和経営コンサルティング" />
     <meta
@@ -30,7 +30,7 @@
     <meta property="og:title" content="生成AI×専門家が描く“再生の設計図”｜創和経営コンサルティング" />
     <meta
       property="og:description"
-      content="生成AIが財務・需要・人材を横断分析し、中小企業診断士が現場視点で再生ロードマップへ翻訳。粗利改善と資金繰りの同時再構築、金融機関交渉まで伴走します。"
+      content="生成AIが財務・需要・人材を横断分析し、中小企業診断士が現場視点で再生ロードマップへ翻訳。45分相談と48時間診断で粗利改善と資金繰り再構築、金融機関交渉まで伴走します。"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://furumachi-smec.lognowa.com/public/lp_2" />
@@ -46,7 +46,7 @@
     <meta name="twitter:title" content="AIと専門家で再生の未来を描く" />
     <meta
       name="twitter:description"
-      content="粗利・キャッシュ・人材の論点をAIが72時間で可視化し、専門家が実行ロードマップと交渉資料へ落とし込みます。福岡発の経営再生支援プログラムです。"
+      content="粗利・キャッシュ・人材の論点をAIが48時間で可視化し、専門家が実行ロードマップと交渉資料へ落とし込みます。福岡発の経営再生支援プログラムです。"
     />
     <meta name="twitter:image" content="https://furumachi-smec.lognowa.com/public/lp_2/og-image.svg" />
     <meta name="twitter:image:alt" content="AI経営顧問サービスの紹介ビジュアル" />
