Revamp landing page messaging and credibility

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>生成AI×専門家で描く経営再生の設計図｜創和経営コンサルティング</title>
     <meta
       name="description"
-      content="福岡・九州の中小企業に特化し、生成AIと診断士が粗利・資金・人材を横断分析。45分の初回相談と48時間診断で再生シナリオと銀行交渉資料まで整備する伴走型サービスです。"
+      content="福岡・九州の中小企業に特化し、生成AI　経営改善　事業再生を同時に進める伴走型サービス。生成AIと診断士が粗利・資金・人材を横断分析し、48時間で再生シナリオと交渉資料を整えます。"
     />
     <meta name="author" content="株式会社創和経営コンサルティング" />
     <meta
